--- a/src/main.scss
+++ b/src/main.scss
@@ -1,18 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Inter:regular,500,700,900);
-
-
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  list-style-type: none;
-  text-decoration: none;
-}
-
-.container{
-  max-width: 1300px;
-  width: 100%;
-  margin: 0 auto;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap');
+@import "scss/reset";
+@import "scss/global";
 
 @import "./Layaout/Header/header.scss";
