--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap');
 @import "scss/reset";
 @import "scss/global";
-
 @import "./Layaout/Header/header.scss";
+@import "./Layaout/Main/main.scss"
+
+
+
