--- a/src/Layaout/Header/header.scss
+++ b/src/Layaout/Header/header.scss
@@ -93,5 +93,55 @@
         padding: 15px 20px;
         box-shadow: 2px 2px 14px rgba(0, 0, 0, 0.1);
         border-radius: 20px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__text {
+        position: absolute;
+
+        left: calc(50% - 466px/2 - 53px);
+        top: 986px;
+        font-weight: 800;
+        font-size: 20px;
+        
+        
+       
+        
+         
+
+    }
+
+    &__text1 {
+            position: absolute;
+            left: calc(50% - 89px/2 - 275.5px);
+            top: 1051px;
+            font-size: 15px; 
+                 
+
+    }
+    &__text2 {
+            position: absolute;
+            left: calc(50% - 91px/2 - 134.5px);
+            top: 1051px;
+            
+            font-size: 15px;
+            align-items: center;
+            
+
+    }
+
+    &__icone1{
+        width: 30px;
+        height: 30px;
+        border-radius: 5px;
+
+    }
+    &__icone2{
+        width: 20px;
+        
+        
+        
+
     }
 }
