add section webinar and section meet

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap');
 @import "scss/reset";
 @import "scss/global";
-@import "./Layaout/Header/header.scss";
-@import "./Layaout/Main/main.scss"
+@import "Layaout/Header/header";
+@import "./Layaout/Main/main-section";
+@import "Pages/SectionWebinar/webinar";
+@import "Pages/CardsWebinar/cards-webinar";
+@import "Pages/Meet/meet";
 
 
 
