--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 @import "Pages/SectionWebinar/webinar";
 @import "Pages/CardsWebinar/cards-webinar";
 @import "Pages/Meet/meet";
+@import "Pages/SectionBonus/bonus";
 
 
 
