--- a/src/Pages/Meet/meet.scss
+++ b/src/Pages/Meet/meet.scss
@@ -2,4 +2,25 @@
 	padding: 40px 0 50px;
 	color: #fff;
 	background: linear-gradient(rgb(24, 23, 23) 55%, rgb(28, 80, 254) 100%);
+
+
+
+	&__body{
+		
+	}
+	
+	&__wrapper{
+		display: flex;
+		
+		
+	}
+	
+
+
 }
+
+
+
+
+
+
