adding new section and add class for all title

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,9 @@
 @import "Pages/CardsWebinar/cards-webinar";
 @import "Pages/Meet/meet";
 @import "Pages/SectionBonus/bonus";
+@import "Pages/Spots/spots";
+@import "Pages/Catch/catch";
+@import "Layaout/Footer/footer";
 
 
 
