--- a/src/Pages/Meet/meet.scss
+++ b/src/Pages/Meet/meet.scss
@@ -2,25 +2,84 @@
 	padding: 40px 0 50px;
 	color: #fff;
 	background: linear-gradient(rgb(24, 23, 23) 55%, rgb(28, 80, 254) 100%);
-
-
-
-	&__body{
-		
-	}
 	
+	&__title {
+		margin-bottom: 50px;
+		text-align: center;
+		@media screen and (max-width: 540px) {
+			margin-bottom: 25px;
+		}
+	}
+
 	&__wrapper{
 		display: flex;
-		
-		
+		gap: 100px;
+		@media screen and (max-width: 992px) {
+			flex-flow: wrap;
+			gap: 50px;
+		}
+		@media screen and (max-width: 540px) {
+			gap: 20px;
+		}
 	}
-	
 
+	&__text {
+		font-size: 20px;
+		line-height: 32px;
+		>p + p {
+			margin-top: 50px;
+			@media screen and (max-width: 540px) {
+				margin-top: 35px;
+			}
+		}
+		@media screen and (max-width: 992px) {
+			order: 2;
+		}
+		@media screen and (max-width: 540px) {
+			font-size: 15px;
+			line-height: 20px;
+		}
+	}
+
+	&__speaker {
+		flex: 1 0 395px;
+		@media screen and (max-width: 992px) {
+			flex: 0 0 340px;
+			margin: 0 auto;
+			order: 1;
+		}
+		@media screen and (max-width: 540px) {
+			flex: 0 1 210px;
+		}
+	}
+
+	&__speaker-image {
+		margin-bottom: 30px;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+		@media screen and (max-width: 540px) {
+			max-width: 195px;
+		}
+	}
+
+	&__speaker-btn {
+		width: 100%;
+		margin-bottom: 20px;
+	}
+
+	&__speaker-txt {
+		color: #B7B7B7;
+		font-size: 15px;
+		text-align: center;
+		@media screen and (max-width: 540px) {
+			font-size: 10px;
+			max-width: 130px;
+			margin: 0 auto;
+		}
+	}
 
 }
-
-
-
-
-
 
