--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -9,6 +9,33 @@ body {
     padding: 0 25px;
     margin: 0 auto;
   }
+
+  .title {
+    font-size: 56px;
+    line-height: 68px;
+    font-weight: 800;
+    @media screen and (max-width: 800px) {
+      font-size: 44px;
+      line-height: 51px;
+    }
+    @media screen and (max-width: 540px) {
+        font-size: 36px;
+        line-height: 43px;
+    }
+  }
+
+  .subtitle {
+    font-weight: 800;
+    line-height: 56px;
+    font-size: 46px;
+    @media screen and (max-width: 800px) {
+      font-size: 38px;
+    }
+    @media screen and (max-width: 540px) {
+        font-size: 26px;
+        line-height: 31px;
+    }
+  }
   
   .btn {
     border: none;
@@ -21,5 +48,9 @@ body {
     border-radius: 15px;
     cursor: pointer;
     text-transform: uppercase;
+    @media screen and (max-width: 540px) {
+			font-size: 15px;
+      padding: 6px 5px;
+		}
   }
  
