--- a/src/Layaout/Header/header.scss
+++ b/src/Layaout/Header/header.scss
@@ -3,6 +3,9 @@
     padding-top: 60px;
     padding-bottom: 32px;
     position: relative;
+		@media screen and (max-width: 540px) {
+			padding-bottom: 20px;
+		}
     &::before {
         content: '';
         position: absolute;
@@ -29,6 +32,10 @@
         line-height: 23px;
         position: relative;
         margin: 60px 0 50px;
+				@media screen and (max-width: 768px) {
+					font-size: 15px;
+					margin: 45px 0 40px;
+				}
         &::before {
             content: '';
             position: absolute;
@@ -42,6 +49,9 @@
 							width: 327px;
 							background: url('../../images/small-line.svg') no-repeat;
 						}
+						@media screen and (max-width: 340px) {
+							width: 300px;
+						}
         }
     }
 
@@ -52,14 +62,21 @@
     &__txt {
         max-width: 390px;
         margin: 0 auto 20px;
+				font-size: 20px;
+				@media screen and (max-width: 540px) {
+					font-size: 15px;
+				}
     }
 
     &__video {
         max-width: 785px;
         margin: 38px auto 20px;
-        height: 448px;
-        background: #E5E5E5;
+        max-height: 448px;
         position: relative;
+				video {
+					width: 100%;
+					height: 100%;
+				}
         &:hover {
             .header__play {
                 opacity: 1;
@@ -119,22 +136,41 @@
         align-items: center;
         gap: 17px;
         margin-bottom: 16px;
+				@media screen and (max-width: 768px) {
+					margin-bottom: 6px;
+					gap: 6px;
+				}
         img {
             width: 71px;
             height: 71px;
             object-fit: cover;
             border-radius: 50%;
+						@media screen and (max-width: 768px) {
+							width: 30px;
+							height: 30px;
+						}
         }
     }
 
     &__post-title {
         font-weight: 800;
         font-size: 20px;
+				@media screen and (max-width: 768px) {
+					font-size: 15px;
+				}
+				@media screen and (max-width: 540px) {
+					font-size: 10px;
+					line-height: 12px;
+				}
     }
     &__post-footer {
         display: flex;
         gap: 23px;
         padding-left: 25px;
+				@media screen and (max-width: 768px) {
+					padding-left: 8px;
+					gap: 15px;
+				}
     }
 
     &__post-box {
@@ -142,15 +178,24 @@
         align-items: center;
         gap: 8px;
         svg {
-            width: 20px;
-            height: 21px;
-            fill: transparent;
+          width: 20px;
+          height: 21px;
+          fill: transparent;
+					@media screen and (max-width: 768px) {
+						width: 15px;
+						height: 16px;
+					}
+					@media screen and (max-width: 540px) {
+						width: 8.4px;
+						height: 9px;
+					}
         }
     }
     &__post-text {
         font-size: 15px;
+				@media screen and (max-width: 540px) {
+					font-size: 10px;
+					line-height: 12px;
+				}
     }
-    
-
-   
 }
