--- a/src/Pages/CardsWebinar/cards-webinar.scss
+++ b/src/Pages/CardsWebinar/cards-webinar.scss
@@ -4,15 +4,17 @@
 	box-shadow: 0 8px 23px rgba(0, 0, 0, .1);
 	border-radius: 20px;
 	flex: 1 1 40%;
-
 	@media screen and (max-width: 768px) {
 		flex: 1 1 auto;
+	}
+	@media screen and (max-width: 540px){
+		padding: 25px;
 	}
 
 	&:first-child svg {
 		width: 50px;
 		height: 50px;
-		@media screen and (max-width: 768px) {
+		@media screen and (max-width: 540px) {
 			width: 28px;
 			height: 28px;
 		}
@@ -24,15 +26,20 @@
 		fill: transparent;
 		margin-bottom: 35px;
 
-		@media screen and (max-width: 768px) {
+		@media screen and (max-width: 540px) {
 			width: 42px;
 			height: 42px;
+			margin-bottom: 20px;
 		}
 	}
 
 	&__desc {
 		font-size: 20px;
 		line-height: 30px;
+		@media screen and (max-width: 540px){
+			font-size: 15px;
+			line-height: 18px;
+		}
 		span {
 			font-weight: 800;
 		}
