--- a/src/Pages/Catch/catch.scss
+++ b/src/Pages/Catch/catch.scss
@@ -1,7 +1,10 @@
 .catch {
-    padding: 50px 0;
+  padding: 50px 0;
 	color: #fff;
 	background: linear-gradient(rgb(24, 23, 23) 55%, rgb(28, 80, 254) 100%);
+	@media screen and (max-width: 540px) {
+		padding: 25px 0 35px;
+	}
 
     &__box {
         display: flex;
@@ -10,6 +13,9 @@
         @media screen and (max-width: 992px) {
             flex-flow: wrap;
         }
+				@media screen and (max-width: 540px) {
+					gap: 25px;
+				}
     }
 
     &__text {
