--- a/src/Pages/SectionWebinar/webinar.scss
+++ b/src/Pages/SectionWebinar/webinar.scss
@@ -1,16 +1,26 @@
 .discover {
 	padding: 30px 0 75px;
 	text-align: center;
+	@media screen and (max-width: 540px){
+		padding: 25px 0 45px;
+	}
 	&__subtitle {
 		color: #aeaeae;
 		font-size: 30px;
 		line-height: 30px;
 		font-weight: 800;
 		margin-bottom: 25px;
+		@media screen and (max-width: 540px){
+			font-size: 15px;
+			margin-bottom: 15px;
+		}
 	}
 
 	&__title {
 		margin-bottom: 55px;
+		@media screen and (max-width: 540px){
+			margin-bottom: 25px;
+		}
 	}
 
 	&__cards {
@@ -21,6 +31,10 @@
 
 		@media screen and (max-width: 992px) {
 			column-gap: 50px;
+		}
+
+		@media screen and (max-width: 540px){
+			gap: 11px;
 		}
 	}
 
