--- a/src/Pages/Spots/spots.scss
+++ b/src/Pages/Spots/spots.scss
@@ -1,10 +1,18 @@
 .spots {
     padding: 50px 0;
     text-align: center;
+		@media screen and (max-width: 540px) {
+			padding: 35px 0;
+		}
 
     &__title {
         max-width: 680px;
         margin: 0 auto 45px;
+				@media screen and (max-width: 540px) {
+					margin-bottom: 30px;
+					font-size: 26px;
+					line-height: 31px;
+				}
     }
 
     &__tooltip {
@@ -18,6 +26,10 @@
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         border-radius: 25px;
         position: relative;
+				@media screen and (max-width: 540px) {
+					font-size: 20px;
+					padding: 12px 24px;
+				}
 
         &::before {
             content: '';
@@ -31,6 +43,12 @@
             border-right-width: 16px;
             border-left-width: 16px;
             border-bottom: 20px solid #E5E5E5;
+						@media screen and (max-width: 540px) {
+							border-right-width: 10px;
+            	border-left-width: 10px;
+							border-bottom-width: 11px;
+							top: -10px;
+						}
         }
     }
 }
